--- a/AssignmentS6_pt2.ipynb
+++ b/AssignmentS6_pt2.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/SushankMishra/S6/blob/main/AssignmentS6_pt2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -25,9 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "0m2JWFliFfKT"
       },
+      "outputs": [],
       "source": [
         "from __future__ import print_function\n",
         "import torch\n",
@@ -35,15 +24,15 @@
         "import torch.nn.functional as F\n",
         "import torch.optim as optim\n",
         "from torchvision import datasets, transforms"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "h_Cx9q2QFgM7"
       },
+      "outputs": [],
       "source": [
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
@@ -64,32 +53,32 @@
         "        x = F.relu(self.conv6(F.relu(self.conv5(x))))\n",
         "        x = F.relu(self.conv7(x))\n",
         "        x = x.view(-1, 10)\n",
-        "        return F.log_softmax(x)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "        return F.log_softmax(x,dim=0)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xdydjYTZFyi3"
       },
+      "outputs": [],
       "source": [
-        "!pip install torchsummary\n",
+        "%pip install torchsummary\n",
         "from torchsummary import summary\n",
         "use_cuda = torch.cuda.is_available()\n",
         "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "model = Net().to(device)\n",
         "summary(model, input_size=(1, 28, 28))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "DqTWLaM5GHgH"
       },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -110,15 +99,15 @@
         "                        transforms.Normalize((0.1307,), (0.3081,))\n",
         "                    ])),\n",
         "    batch_size=batch_size, shuffle=True, **kwargs)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8fDefDhaFlwH"
       },
+      "outputs": [],
       "source": [
         "from tqdm import tqdm\n",
         "def train(model, device, train_loader, optimizer, epoch):\n",
@@ -151,15 +140,15 @@
         "    print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
         "        test_loss, correct, len(test_loader.dataset),\n",
         "        100. * correct / len(test_loader.dataset)))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MMWbLWO6FuHb"
       },
+      "outputs": [],
       "source": [
         "\n",
         "model = Net().to(device)\n",
@@ -168,18 +157,32 @@
         "for epoch in range(1, 2):\n",
         "    train(model, device, train_loader, optimizer, epoch)\n",
         "    test(model, device, test_loader)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "So5uk4EkHW6R"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
