--- a/AssignmentS6_pt2.ipynb
+++ b/AssignmentS6_pt2.ipynb
@@ -37,23 +37,56 @@
         "class Net(nn.Module):\n",
         "    def __init__(self):\n",
         "        super(Net, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 32, 3, padding=1) #input -? OUtput? RF\n",
-        "        self.conv2 = nn.Conv2d(32, 64, 3, padding=1)\n",
-        "        self.pool1 = nn.MaxPool2d(2, 2)\n",
-        "        self.conv3 = nn.Conv2d(64, 128, 3, padding=1)\n",
-        "        self.conv4 = nn.Conv2d(128, 256, 3, padding=1)\n",
-        "        self.pool2 = nn.MaxPool2d(2, 2)\n",
-        "        self.conv5 = nn.Conv2d(256, 512, 3)\n",
-        "        self.conv6 = nn.Conv2d(512, 1024, 3)\n",
-        "        self.conv7 = nn.Conv2d(1024, 10, 3)\n",
-        "\n",
+        "        self.conv1 = nn.Sequential(\n",
+        "            nn.Conv2d(1, 32, 3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(32),\n",
+        "            nn.Conv2d(32, 32, 3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(32),\n",
+        "            nn.Conv2d(32, 32, 3, stride=2, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(32),\n",
+        "            nn.MaxPool2d(2, 2),\n",
+        "            nn.Dropout(0.3)\n",
+        "        )\n",
+        "        \n",
+        "        self.conv2 = nn.Sequential(\n",
+        "            nn.Conv2d(32, 64, 3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(64),\n",
+        "            nn.Conv2d(64, 64, 3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(64),\n",
+        "            nn.Conv2d(64, 64, 3, stride=2, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(64),\n",
+        "            nn.MaxPool2d(2, 2),\n",
+        "            nn.Dropout(0.3)\n",
+        "        )\n",
+        "        \n",
+        "        self.conv3 = nn.Sequential(\n",
+        "            nn.Conv2d(64, 128, 3, padding=1),\n",
+        "            nn.ReLU(),\n",
+        "            nn.BatchNorm2d(128),\n",
+        "            nn.MaxPool2d(2, 2),\n",
+        "            nn.Dropout(0.3)\n",
+        "        )\n",
+        "        \n",
+        "        # self.fc = nn.Sequential(\n",
+        "        #     nn.Linear(128, 10)\n",
+        "        # )\n",
+        "                \n",
+        "        \n",
         "    def forward(self, x):\n",
-        "        x = self.pool1(F.relu(self.conv2(F.relu(self.conv1(x)))))\n",
-        "        x = self.pool2(F.relu(self.conv4(F.relu(self.conv3(x)))))\n",
-        "        x = F.relu(self.conv6(F.relu(self.conv5(x))))\n",
-        "        x = F.relu(self.conv7(x))\n",
-        "        x = x.view(-1, 10)\n",
-        "        return F.log_softmax(x,dim=0)"
+        "        x = self.conv1(x)\n",
+        "        x = self.conv2(x)\n",
+        "        x = self.conv3(x)\n",
+        "        \n",
+        "        x = x.view(x.size(0), -1)\n",
+        "        # x = self.fc(x)\n",
+        "        x = F.log_softmax(x, dim=1)\n",
+        "        return x"
       ]
     },
     {
@@ -64,7 +97,6 @@
       },
       "outputs": [],
       "source": [
-        "%pip install torchsummary\n",
         "from torchsummary import summary\n",
         "use_cuda = torch.cuda.is_available()\n",
         "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
