--- a/AssignmentS6_pt2.ipynb
+++ b/AssignmentS6_pt2.ipynb
@@ -73,9 +73,9 @@
         "            nn.Dropout(0.3)\n",
         "        )\n",
         "        \n",
-        "        # self.fc = nn.Sequential(\n",
-        "        #     nn.Linear(128, 10)\n",
-        "        # )\n",
+        "        self.fc = nn.Sequential(\n",
+        "            nn.Linear(128, 10)\n",
+        "        )\n",
         "                \n",
         "        \n",
         "    def forward(self, x):\n",
@@ -84,9 +84,9 @@
         "        x = self.conv3(x)\n",
         "        \n",
         "        x = x.view(x.size(0), -1)\n",
-        "        # x = self.fc(x)\n",
+        "        x = self.fc(x)\n",
         "        x = F.log_softmax(x, dim=1)\n",
-        "        return x"
+        "        return x\n"
       ]
     },
     {
